Atualização de arquivos js, css e index.html
Adicionei um efeito de animação ao scroll na página Index.
Efeito aplicado com javascript e css.
Ao rolar a página, as seções aparecem com efeito de slide.

--- a/css/style.css
+++ b/css/style.css
@@ -508,3 +508,15 @@ a {
     font-size: 1.25em;
   }
 }
+
+/* ESTILOS PARA EFEITOS EM JS */
+.js .js-scroll {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: 0.3s;
+}
+
+.js .js-scroll.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
